# EmbedFinder

./: .gitignore  README.md  main.py  pyproject.toml
src/: embedding.py  files.py
